--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -16,9 +16,8 @@
 
 .food-page-container {
   display: flex;
-  max-width: 1200px;
   margin: auto;
-  border-radius: 15px;
+  border-radius: 15px 15px 0px 0px;
 }
 
 .category-section {
@@ -156,6 +155,76 @@
   color: #fff;
 }
 
+.pagination-container-card {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10px;
+  width: 100%;
+  background-color: white;
+  padding-right: 65px;
+  border-radius: 0px 0px 15px 15px;
+}
+
+.custom-pagination-card {
+  display: flex;
+  gap: 10px;
+  padding: 5px;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.custom-pagination-card .page-item .page-link {
+  border-radius: 50%;
+  padding: 8px 15px;
+  margin: 0 3px;
+  border: none;
+  font-weight: 600;
+  font-size: 0.8em;
+  background-color: #f5f5f5;
+  font-size: 0.8em;
+  color: #333;
+  transition: all 0.3s ease-in-out;
+}
+
+.custom-pagination-card .page-item .page-link:hover {
+  background-color: #ff7f50;
+  color: white;
+  transform: translateY(-2px);
+  box-shadow: 0px 3px 6px rgba(255, 127, 80, 0.4);
+}
+
+.custom-pagination-card .page-item.active .page-link {
+  background: linear-gradient(135deg, #ff6600, #ff4500);
+  color: white;
+  font-weight: bold;
+  box-shadow: 0px 4px 10px rgba(255, 69, 0, 0.4);
+  transform: scale(1.05);
+}
+
+.custom-pagination-card .page-item:first-child .page-link,
+.custom-pagination-card .page-item:last-child .page-link {
+  border-radius: 8px;
+  background-color: #ddd;
+  color: #444;
+  transition: all 0.3s ease-in-out;
+}
+
+.custom-pagination-card .page-item:first-child .page-link:hover,
+.custom-pagination-card .page-item:last-child .page-link:hover {
+  background-color: #ff6600;
+  color: white;
+  transform: scale(1.1);
+}
+
+.custom-pagination-card .page-item.disabled .page-link {
+  background-color: #e0e0e0;
+  color: #aaa;
+  cursor: not-allowed;
+  transform: none;
+  box-shadow: none;
+}
+
 @media (max-width: 1024px) {
   .category-section {
     padding-left: 0 !important;
@@ -242,7 +311,8 @@
   .food-price-and-quantity {
     margin: 5px 0px;
   }
-  .food-item-price, .food-item-quantity {
+  .food-item-price,
+  .food-item-quantity {
     font-size: 0.7em;
   }
   .bt-add-to-cart,
@@ -337,7 +407,7 @@
   }
 }
 
-@media(max-width:248px) {
+@media (max-width: 248px) {
   .bt-add-to-cart,
   .bt-buy-now {
     margin-bottom: 5px;
@@ -363,21 +433,3 @@
     border: 1px solid tomato;
   }
 }
-
-/* @media (max-width: 376px) {
-  .food-page-container {
-    flex-direction: column;
-  }
-
-  .category-section {
-    flex: 1;
-    flex-direction: row;
-    overflow-x: auto;
-    white-space: nowrap;
-  }
-
-  .category-list li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-} */
