--- a/src/page/blog_detail/BlogDetail.css
+++ b/src/page/blog_detail/BlogDetail.css
@@ -17,11 +17,17 @@ body {
     transform: translateY(0);
   }
 }
-
+.outer-wrapper {
+  border-radius: 15px;
+}
 .container-bg {
   background-color: white;
+  border-radius: 15px 15px 0px 0px;
 }
-
+.container-bg-comment {
+  background-color: white;
+  border-radius: 0px 0px 15px 15px;
+}
 .ic-delete {
   color: rgb(223, 0, 0);
   font-size: 20px;
@@ -486,9 +492,10 @@ body {
 
 .blog-detail-container {
   display: grid;
-  grid-template-columns: 3fr 7fr;
+  grid-template-columns: 4fr 6fr;
   gap: 20px;
   margin-top: 20px;
+  padding: 0px 15px;
 }
 
 .blog-left {
@@ -502,6 +509,7 @@ body {
   height: auto;
   border-radius: 8px;
   object-fit: cover;
+  margin-bottom: 15px;
 }
 
 .blog-description,
@@ -509,14 +517,15 @@ body {
   background-color: #f9f9f9;
   padding: 15px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  margin-bottom: 15px;
 }
 
 .blog-right {
   background-color: #ffffff;
   padding: 15px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 /* Toggle Button */
