--- a/src/page/cart/Cart.css
+++ b/src/page/cart/Cart.css
@@ -6,6 +6,11 @@
   font-size: max(1vw, 12px);
 }
 
+.cart {
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 .cart-items-item {
   margin: 10px 0px;
   color: black;
@@ -69,7 +74,7 @@
   background-color: tomato;
   border: 1px solid rgb(255, 255, 255);
   color: white;
-  border-radius: 3px;
+  border-radius: 5px;
   font-size: 13px;
 }
 
@@ -129,7 +134,7 @@
   color: white !important;
 }
 
-.popup {
+.popup-delete {
   position: fixed;
   top: 0;
   left: 0;
@@ -142,25 +147,25 @@
   z-index: 1000;
 }
 
-.popup-content {
+.popup-content-delete {
   background-color: white;
-  padding: 40px;
+  padding: 30px;
   border-radius: 8px;
   width: 500px;
   text-align: center;
 }
 
-.popup-content .info-delete {
+.popup-content-delete .info-delete {
     font-weight: 500;
     color: #333;
 }
 
-.popup-buttons {
+.popup-buttons-delete {
   margin-top: 30px;
 }
 
-.popup-buttons .button-delete {
-  padding: 5px 20px;
+.popup-buttons-delete .button-delete {
+  padding: 8px 20px;
   margin: 5px;
   border: none;
   background-color: rgb(234, 0, 0);
@@ -169,12 +174,12 @@
   border-radius: 4px;
 }
 
-.popup-buttons .button-delete:hover {
+.popup-buttons-delete .button-delete:hover {
   background-color: #b82525;
 }
 
-.popup-buttons .button-cancel {
-  padding: 5px 20px;
+.popup-buttons-delete .button-cancel {
+  padding: 8px 20px;
   margin: 5px;
   border: none;
   background-color: #333;
@@ -183,11 +188,11 @@
   border-radius: 4px;
 }
 
-.popup-buttons .button-cancel:hover {
+.popup-buttons-delete .button-cancel:hover {
     background-color: #696969;
 }
 
-.popup-close {
+.popup-close-delete {
   position: absolute;
   top: 10px;
   right: 10px;
