--- a/src/page/blog/Blog.css
+++ b/src/page/blog/Blog.css
@@ -24,6 +24,41 @@
   font-size: 1em;
 }
 
+.search-input-group {
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.search-input-group input {
+  width: 100%;
+  padding: 10px 100px 10px 15px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.search-dropdown {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  border: none;
+  background: #f0f0f0;
+  padding: 0 10px;
+  border-left: 1px solid #ccc;
+  font-size: 14px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  cursor: pointer;
+}
+
+.search-dropdown:hover {
+  border: 2px white solid;
+}
+
 .search-bar {
   flex: 1;
   width: 50vw;
