--- a/src/page/edit_profile/EditProfile.css
+++ b/src/page/edit_profile/EditProfile.css
@@ -17,6 +17,10 @@
   margin-bottom: 10%; 
 }
 
+.edit-profile-container button {
+  border-radius: 5px;
+}
+
 .edit-profile-header {
   display: flex;
   justify-content: center;
