--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -1,3 +1,36 @@
+.custom-col {
+  flex: 0 0 14%;
+  max-width: 14%;
+  margin-bottom: 1rem;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+}
+
+.category-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+.category-item {
+  cursor: pointer;
+  padding: 8px 15px;
+  border-radius: 8px;
+  background-color: #f1f1f1;
+  transition: background-color 0.3s;
+}
+
+.category-item:hover {
+  background-color: #ddd;
+}
+
+.category-item.active {
+  background-color: #ff6c16;
+  color: white;
+}
+
 .checkmark {
   width: 60px !important;
   height: 60px !important;
@@ -62,22 +95,28 @@
   height: 100%;
 }
 
+.card-body {
+  padding: 0.5rem;
+}
+
 .image-menu-contents img {
   width: 100%;
   height: 100%;
 }
 
 .food-page-container {
-  display: flex;
-  margin: auto;
+  margin: 0px !important;
+  width: 100%;
   border-radius: 15px 15px 0px 0px;
 }
 
 .category-section {
-  max-width: 200px;
-  height: 100vh;
+  max-width: 100%;
+  height: 13vh;
+  margin-bottom: 15px;
   font-size: 0.85em;
-  overflow-y: auto;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .category-list {
@@ -89,12 +128,15 @@
 .category-list li {
   padding: 8px 7px;
   cursor: pointer;
+  background-color: white;
+  border: 1px solid gray;
   color: #333;
   transition: background-color 0.2s ease-in-out;
 }
 
 .category-list li:hover {
-  color: tomato;
+  background-color: #ff5e2c;
+  color: white;
   font-weight: bold;
 }
 
@@ -405,6 +447,16 @@
   }
 }
 
+@media (max-width: 1129px) {
+  .custom-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+}
+
 @media (max-width: 1025px) {
   .food-card {
     width: 115px;
@@ -415,7 +467,34 @@
   }
 }
 
+@media (max-width: 980px) {
+  .custom-col {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+    margin-bottom: 0.4rem;
+  }
+}
+
 @media (max-width: 800px) {
+  .card-img-top {
+    height: 100px !important;
+    padding: 8px !important;
+  }
+  .card-body h6 {
+    font-size: 0.8em !important;
+  }
+  .card-body p {
+    font-size: 0.7em !important;
+  }
+  .card-footer {
+    padding-top: 0px !important;
+  }
+  .card-footer button {
+    font-size: 0.6em !important;
+    padding: 7px 10px !important;
+  }
   .category-section {
     font-size: 0.7em;
   }
@@ -426,6 +505,26 @@
     width: 20vw;
     height: 270px;
     border-radius: 5px;
+  }
+}
+
+@media (max-width: 768px) {
+  .custom-col {
+    flex: 0 0 24%;
+    max-width: 24%;
+    padding-left: 0.4rem;
+    padding-right: 0.4rem;
+    margin-bottom: 0.4rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .custom-col {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    margin-bottom: 0.3rem;
   }
 }
 
@@ -468,114 +567,87 @@
   }
 }
 
-@media (max-width: 480px) {
-  .food-page-container {
-    flex-direction: column;
-  }
-
-  .category-section {
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
-    max-width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-    height: 50px;
-    margin-top: -35px;
-    padding-left: 0px !important;
-    margin-bottom: 15px;
-  }
-
-  .category-list {
-    display: flex;
-    flex-wrap: nowrap;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    gap: 10px;
-    white-space: nowrap;
-  }
-
-  .category-list li {
-    padding: 5px 10px;
-    cursor: pointer;
-    background-color: #ffffff;
-    border-radius: 5px;
-    transition: background-color 0.2s ease-in-out;
-    white-space: nowrap;
-    font-size: 12px;
-    text-align: center;
-  }
-
-  .category-list li:hover {
-    background-color: tomato;
-    color: white;
-    font-weight: bold;
-  }
-
-  .category-list li:active {
-    background-color: rgb(218, 0, 0);
-    color: white;
-  }
-
-  .food-page-container {
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  }
-
-  .food-grid {
-    padding: 0;
-    border-left: none;
-    width: 80vw;
-    gap: 5px;
-    justify-content: space-between;
-    margin-bottom: 5px;
-  }
-
-  .food-card {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    width: 39vw;
-    height: 185px;
-    overflow: hidden;
-    text-align: center;
-    box-sizing: border-box;
-  }
-
-  .food-item-price,
-  .food-item-quantity {
-    font-size: 0.7em;
-  }
-  .bt-add-to-cart,
-  .bt-buy-now {
-    padding: 5px 5px;
+@media (max-width: 573px) {
+  .custom-col {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding-left: 0.1rem;
+    padding-right: 0.1rem;
+    margin-bottom: 0.1rem;
   }
 }
 
-@media (max-width: 248px) {
-  .bt-add-to-cart,
-  .bt-buy-now {
-    margin-bottom: 5px;
+@media (max-width: 518px) {
+  .custom-col {
+    flex: 0 0 33%;
+    max-width: 33%;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    margin-bottom: 0.3rem;
   }
-  .food-card {
-    width: 80vw;
-    height: 198px;
-    margin-bottom: 15px;
+}
+
+@media (max-width: 481px) {
+  .category-section {
+    height: 16vh !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+    padding: 30px 0px 0px 0px;
   }
-  .food-item-img-container {
-    height: 100px;
+
+  .category-section h5 {
+    font-size: 1.8em;
   }
-  .image-menu-contents {
-    height: 90px;
-  }
-  .image-menu {
-    height: 90px;
+}
+
+@media (max-width: 423px) {
+  .food-page-container {
+    padding: 24px 5px !important;
   }
   .category-section {
-    margin-bottom: -5px;
+    margin-left: 15px !important;
+    height: 16vh !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
   }
-  .category-list li {
-    border: 1px solid tomato;
+
+  .category-section h5 {
+    font-size: 1.8em;
+  }
+}
+
+@media (max-width: 423px) {
+  .food-page-container {
+    padding: 24px 5px !important;
+  }
+  .category-section {
+    margin-left: 15px !important;
+    height: 16vh !important;
+    overflow-x: hidden !important;
+    overflow-y: hidden !important;
+  }
+}
+
+@media (max-width: 383px) {
+  .custom-col {
+    padding-left: 0.1rem;
+    padding-right: 0.1rem;
+    margin-bottom: 0.1rem;
+  }
+}
+
+@media (max-width: 383px) {
+  .custom-col {
+    flex: 0 0 48%;
+    max-width: 48%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .category-list{
+    gap: 0px !important;
+  }
+  .category-section {
+    margin-left: 5px !important;
   }
 }
