--- a/src/page/blog/Blog.css
+++ b/src/page/blog/Blog.css
@@ -3,6 +3,12 @@
   background-color: #f3f3f3;
 }
 
+.choose {
+  margin-left: -10px;
+  width: 15%;
+  font-size: 0.8em;
+}
+
 .main-content {
   padding: 20px;
   max-width: 900px;
@@ -25,6 +31,7 @@
 }
 
 .search-input-group {
+  left: 25px;
   position: relative;
   display: flex;
   width: 100%;
@@ -33,7 +40,7 @@
 }
 
 .search-input-group input {
-  width: 100%;
+  width: 80%;
   padding: 10px 100px 10px 15px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -43,7 +50,7 @@
 .search-dropdown {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 35px;
   height: 100%;
   border: none;
   background: #f0f0f0;
@@ -326,7 +333,46 @@
   }
 }
 
+@media (max-width: 980px) {
+  .search-input-group {
+    height: 40px;
+  }
+
+  .custom-select__control {
+    min-height: 32px !important;
+    height: 40px !important;
+  }
+
+  .custom-select__value-container {
+    padding: 0 8px !important;
+  }
+
+  .search-input-group input {
+    font-size: 0.85em;
+  }
+}
+
+@media (max-width: 850px) {
+  .choose {
+    margin-left: -30px;
+  }
+  .custom-select__control {
+    width: 100px;
+  }
+
+  .custom-select__value-container {
+    padding: 0 8px !important;
+  }
+
+  .search-input-group input {
+    font-size: 0.85em;
+  }
+}
+
 @media (max-width: 800px) {
+  .choose {
+    margin-left: -50px;
+  }
   .header-blog {
     padding: 10px;
   }
@@ -383,8 +429,32 @@
 }
 
 @media (max-width: 600px) {
+  .choose {
+    margin-left: -60px;
+  }
+  .custom-select__control {
+    width: 100px;
+    height: 32px !important;
+    margin-top: 5px;
+  }
+  .search-input-group select {
+    width: 15px !important;
+  }
+  .blog-post {
+    padding-bottom: 5px;
+  }
   .header-blog {
     padding: 0px;
+  }
+  .search-input-group input {
+    height: 32px;
+    margin-top: 5px;
+    font-size: 0.7em;
+  }
+  .search-dropdown {
+    font-size: 0.7em;
+    height: 32px;
+    margin-top: 5px;
   }
   .logo {
     font-size: 0.5em;
@@ -418,15 +488,10 @@
   .main-content {
     padding: 7px;
   }
-  .post-image {
-    width: 70px;
-    height: 60px;
-    object-fit: fill;
-  }
   .post-content h2 {
-    font-size: 0.7em;
+    font-size: 0.75em;
     font-weight: 800;
-    margin: 0px 0px 5px;
+    margin: 15px 0px 5px;
   }
   .post-content p {
     font-size: 0.6em;
@@ -439,6 +504,15 @@
 }
 
 @media (max-width: 480px) {
+  .choose {
+    margin-left: -80px;
+    font-size: 0.7em;
+  }
+  .custom-select__control {
+    width: 100px;
+    height: 32px !important;
+    margin-top: 5px;
+  }
   .header-blog {
     padding: 0px;
   }
@@ -474,11 +548,12 @@
     padding: 7px;
   }
   .post-image {
-    width: 70px;
-    height: 60px;
+    width: 100px;
+    height: 80px;
     object-fit: fill;
   }
   .post-content h2 {
+    padding-top: 15px;
     font-size: 0.7em;
     font-weight: 800;
     margin: 0px 0px 5px;
@@ -490,6 +565,69 @@
     padding: 4px 5px;
     font-size: 0.6em;
     margin-top: 5px;
+  }
+}
+
+@media (max-width: 410px) {
+  .search-input-group input {
+    margin-left: -20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .custom-select__single-value,
+  .custom-select__indicator {
+    margin-bottom: 5px;
+  }
+  .custom-select__indicators {
+    padding: 0 4px !important;
+  }
+
+  .custom-select__dropdown-indicator {
+    font-size: 14px !important;
+    padding: 0 !important;
+    width: 16px;
+    height: 16px;
+  }
+
+  .choose {
+    margin-left: -40px;
+    font-size: 0.6em;
+  }
+  .custom-select__control {
+    width: 80px;
+    height: 32px !important;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 350px) {
+  .custom-select__single-value,
+  .custom-select__indicator {
+    margin-bottom: 5px;
+  }
+  .custom-select__indicators {
+    padding: 0 4px !important;
+  }
+
+  .custom-select__dropdown-indicator {
+    font-size: 10px !important;
+    padding: 0 !important;
+    margin-top: 2px;
+    width: 10px;
+    height: 16px;
+  }
+
+  .custom-select__control{
+    width: 65px;
+  }
+
+  .choose {
+    margin-left: -30px;
+    font-size: 0.6em;
+  }
+  .custom-pagination-blog {
+   
   }
 }
 
