--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -528,6 +528,12 @@
   }
 }
 
+@media (max-width: 628px) {
+  .card-footer {
+    font-size: 0.8em;
+  }
+}
+
 @media (max-width: 600px) {
   .category-section {
     font-size: 0.6em;
@@ -567,6 +573,12 @@
   }
 }
 
+@media (max-width: 581px) {
+  .card-footer {
+    font-size: 0.7em;
+  }
+}
+
 @media (max-width: 573px) {
   .custom-col {
     flex: 0 0 25%;
@@ -577,6 +589,12 @@
   }
 }
 
+@media (max-width: 530px) {
+  .card-footer {
+    font-size: 0.65em;
+  }
+}
+
 @media (max-width: 518px) {
   .custom-col {
     flex: 0 0 33%;
@@ -584,6 +602,9 @@
     padding-left: 0.3rem;
     padding-right: 0.3rem;
     margin-bottom: 0.3rem;
+  }
+  .card-footer {
+    font-size: 0.75em;
   }
 }
 
@@ -600,6 +621,16 @@
   }
 }
 
+@media (max-width: 441px) {
+  .card-footer {
+    padding: 0px 5px 8px 5px !important;
+  }
+
+  .card-footer {
+    font-size: 0.75em;
+  }
+}
+
 @media (max-width: 423px) {
   .food-page-container {
     padding: 24px 5px !important;
@@ -610,7 +641,9 @@
     overflow-x: hidden !important;
     overflow-y: hidden !important;
   }
-
+  .card-footer {
+    padding: 0px 5px 8px 5px !important;
+  }
   .category-section h5 {
     font-size: 1.8em;
   }
@@ -625,6 +658,12 @@
     height: 16vh !important;
     overflow-x: hidden !important;
     overflow-y: hidden !important;
+  }
+}
+
+@media (max-width: 401px) {
+  .card-footer {
+    font-size: 0.85em;
   }
 }
 
@@ -644,7 +683,7 @@
     padding-right: 0.5rem;
     margin-bottom: 0.5rem;
   }
-  .category-list{
+  .category-list {
     gap: 0px !important;
   }
   .category-section {
